--- a/BakeItHappen/Css/register.css
+++ b/BakeItHappen/Css/register.css
@@ -4,25 +4,12 @@ html, body{
     margin: 0;
     height: 100%;
     }
-    
-  
-    
-    /* CUSTOM TITLE FONT */
-    @font-face {
-        font-family: titleFont;
-        src: url(../Fonts/QuiteMagicalRegular-8VA2.ttf);
-    }
 
-/* BAKE IT HAPPEN TITLE */
-#title{
-    font-family: titleFont;
-    text-align: center;
-	padding-top: .5em;
-    padding-bottom: .1em;
-    font-size: 4rem;
-    color:#ffa600;
-}
 
+
+    
+    
+    
     #background {
         
         background-color: #000000;
@@ -36,9 +23,20 @@ html, body{
         width: 100%;
         position: relative;
         overflow: hidden;
-        font-family: titleFont;
-        font-size: 3rem;
     }
+    
+    
+    /* CUSTOM TITLE FONT */
+    @font-face {
+        font-family: titleFont;
+        src: url(../Fonts/QuiteMagicalRegular-8VA2.ttf);
+    }
+    .navbar-brand{
+        font-family:titleFont;
+        font-size: 2rem;
+        color:#ffa600 !important;
+ }
+    
     
     
     
@@ -73,11 +71,11 @@ html, body{
         -webkit-text-stroke: 1px black;
         -webkit-text-fill-color: #ffa600; */
     }
-    /*#inputContainer h1{
+    #inputContainer h1{
         text-align: center;
         font-family: titleFont;
         font-size: 3rem;
-    }*/
+    }
     #inputContainer h2{
         text-align: center;
         font-family: titleFont;
@@ -110,16 +108,17 @@ html, body{
         font-size: 12px;
         font-size: 13px;.
 */
-   #inputContainer button{
-        background-color: #007bff;;
-        border-radius: 8px;
-        color: white;
+    #inputContainer button{
+        background-color: transparent;
+        border: 2px solid #ffa600;
+        border-radius: 250px;
+        color: #ffa600;
         display: block;
+        font-size: 16px;
         font-size: 1rem;
         letter-spacing: 1px;
         margin: 20px auto;
         height: 41px;
-        border: none;
     }
     #inputContainer button:hover{
         cursor: pointer;
@@ -167,3 +166,6 @@ html, body{
     font-style: italic;
     color:  #b1a394;
 }
+
+
+ 
