Modified Submit Recipe page
-Increased width of form fields
-Changed alignment of form and submit button
-Added image
-Fixed 'Home' hyperlink to point to 'home.php' since submit recipe page is only accessible when logged in

--- a/BakeItHappen/Css/mystyle-submit.css
+++ b/BakeItHappen/Css/mystyle-submit.css
@@ -108,9 +108,18 @@
 	width: 100%
 }
 
-form{
+div.form{
+	display: block;
 	padding-left: .5em;
-    padding-bottom: .5em;
+	padding-bottom: .5em;
+	text-align: center;
+}
+form
+{
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    //text-align: left;
 }
 
 table{
